# turnover-app

./: .env  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  makefile  pyproject.toml
api/: .dockerignore  .env.example  Dockerfile  main.py  mock_data.py  requirements.txt  routes.md
api/core/: dependencies.py  security.py
api/routes/: admin.py  auth.py  employees.py  predictions.py  users.py
api/schemas/: admin.py  auth.py  employee.py  prediction.py  user.py
api/services/: admin_service.py  auth_service.py  employee_service.py  prediction_service.py  user_service.py
api/tests/: test_routes.py
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/administration/: AuditTab.jsx  ModelTab.jsx  MonitoringTab.jsx  UsersTab.jsx
frontend/src/components/dashboard/: KpiCard.jsx  TopRiskTable.jsx
frontend/src/components/employee/: EmployeeHero.jsx  RhHistory.jsx  ShapFactors.jsx  rhHistory.jsx
frontend/src/components/employees/: EmployeesTable.jsx
frontend/src/components/layout/: Layout.jsx  ProtectedRoute.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/components/ui/: RiskBadge.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
frontend/src/lib/: api.js  services.js
frontend/src/pages/: Administration.jsx  Dashboard.jsx  EmployeeProfile.jsx  Employees.jsx  Login.jsx
