[project]
name = "turnover-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "boruta>=0.4.3",
    "fastapi>=0.123.4",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "makefile>=1.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
